# voidorchestra

./: .buildinfo  .copier-answers.yaml  .gitignore  .pre-commit-config.yaml  Makefile  README.html  README.md  README_mdb.html  README_mdb.md  README_mm.html  README_mm.md  docker-compose.yml  genindex.html  index.html  objects.inv  py-modindex.html  pyproject.toml  requirements.system  requirements.txt  search.html  searchindex.js  voidorchestra.ini
.doctrees/: README.doctree  README_mdb.doctree  README_mm.doctree  environment.pickle  index.doctree
.doctrees/.github/: CODE_OF_CONDUCT.doctree
.doctrees/.github/ISSUE_TEMPLATE/: bug_report.doctree  feature_request.doctree
.doctrees/autoapi/: index.doctree
.doctrees/autoapi/voidorchestra/: index.doctree
.doctrees/autoapi/voidorchestra/active_learning/: index.doctree
.doctrees/autoapi/voidorchestra/console/: index.doctree
.doctrees/autoapi/voidorchestra/db/: index.doctree
.doctrees/autoapi/voidorchestra/import/: index.doctree
.doctrees/autoapi/voidorchestra/log/: index.doctree
.doctrees/autoapi/voidorchestra/process/: index.doctree
.doctrees/autoapi/voidorchestra/tests/: index.doctree
.doctrees/autoapi/voidorchestra/zooniverse/: index.doctree
.doctrees/docs/source/: api.doctree  configuration.doctree  genindex.doctree  index.doctree  quickstart.doctree
.doctrees/docs/source/_templates/: custom-class-template.doctree  custom-module-template.doctree
.doctrees/docs/source/active_learning/: introduction.doctree  selection.doctree
.doctrees/docs/source/zooniverse/: classifications.doctree  project.doctree  subjects.doctree
.github/: dependabot.yaml
.github/workflows/: build.yaml  docs.yaml
_sources/: README.md.txt  index.md.txt
_sources/.github/: CODE_OF_CONDUCT.md.txt
_sources/autoapi/: index.rst.txt
_sources/autoapi/voidorchestra/: index.rst.txt
_sources/autoapi/voidorchestra/active_learning/: index.rst.txt
_sources/autoapi/voidorchestra/console/: index.rst.txt
_sources/autoapi/voidorchestra/db/: index.rst.txt
_sources/autoapi/voidorchestra/import/: index.rst.txt
_sources/autoapi/voidorchestra/log/: index.rst.txt
_sources/autoapi/voidorchestra/process/: index.rst.txt
_sources/autoapi/voidorchestra/tests/: index.rst.txt
_sources/autoapi/voidorchestra/zooniverse/: index.rst.txt
_sources/docs/source/: api.rst.txt  configuration.rst.txt  index.rst.txt
_sources/docs/source/zooniverse/: subjects.rst.txt
autoapi/: index.html
autoapi/voidorchestra/: index.html
autoapi/voidorchestra/active_learning/: index.html
autoapi/voidorchestra/active_learning/weights/: index.html
autoapi/voidorchestra/console/: index.html
autoapi/voidorchestra/console/cli/: index.html
autoapi/voidorchestra/console/commands/: index.html
autoapi/voidorchestra/db/: index.html
autoapi/voidorchestra/db/classification/: index.html
autoapi/voidorchestra/db/lightcurve/: index.html
autoapi/voidorchestra/db/lightcurve_collection/: index.html
autoapi/voidorchestra/db/qpo_model/: index.html
autoapi/voidorchestra/db/sonification/: index.html
autoapi/voidorchestra/db/sonification_method/: index.html
autoapi/voidorchestra/db/sonification_profile/: index.html
autoapi/voidorchestra/db/subject/: index.html
autoapi/voidorchestra/db/subject_set/: index.html
autoapi/voidorchestra/import/: index.html
autoapi/voidorchestra/import/file/: index.html
autoapi/voidorchestra/log/: index.html
autoapi/voidorchestra/process/: index.html
autoapi/voidorchestra/process/lightcurve_collection/: index.html
autoapi/voidorchestra/process/lightcurves/: index.html
autoapi/voidorchestra/process/qpo_models/: index.html
autoapi/voidorchestra/tests/: index.html
autoapi/voidorchestra/zooniverse/: index.html
data/fixtures/: sonification_profiles.csv  soundfonts.csv
data/images/: volume-icon.xcf
data/lightcurves/RE_J1034+396/: PN_source_corr_broadband_sub.lc
data/lightcurves/SDSS_J1430+2303/: table_httpsirsa.ipac.caltech.educgi-bing2pnp.csv
docs/: entity_relational_diagram.drawio
docs/source/: api.html  conf.py  configuration.html  genindex.html  index.html  quickstart.html  quickstart.rst
docs/source/_static/: assign_dangling_subjects.py
docs/source/_templates/: custom-class-template.html  custom-module-template.html
docs/source/active_learning/: introduction.html  introduction.rst  selection.html  selection.rst
docs/source/zooniverse/: classifications.html  classifications.rst  project.html  project.rst  subjects.html
nginx/: voidorchestra.conf
scripts/: add_synthetic_lightcurves_regular.py  assign_sonification_profile_to_subject_set.py  docs_histogram_example.py  generate_synthetic_lightcurves.py  generate_test_models.py  import_observed_lightcurves.py  reset_for_testing.sh  test_background_detection.py  test_histogram.py  test_hough_lines.py
scripts/dev/: assign_dangling_subjects.py  db-test.sh  rand_confidence.py  remove_duplicates.py
voidorchestra/: __init__.py  log.py
voidorchestra/active_learning/: __init__.py  weights.py
voidorchestra/console/: __init__.py  cli.py
voidorchestra/console/commands/: __init__.py  admin.py  check.py  clear.py  create.py  delete.py  init.py  remove.py  scan.py  sync.py  upload.py  upload_molegazer.py  watch.py
voidorchestra/db/: __init__.py  classification.py  lightcurve_collection.py  qpo_model.py  sonification.py  sonification_method.py  sonification_profile.py  subject.py  subject_set.py
voidorchestra/db/lightcurve/: __init__.py  file.py  synthetic.py
voidorchestra/db/sonification_method/: __init__.py  soundfont.py  synthesizer.py
voidorchestra/import/: __init__.py  file.py
voidorchestra/process/: context.py  images.py  lightcurve_collection.py  lightcurves.py  qpo_models.py  scan.py
voidorchestra/process/sonification/: __init__.py  figure.py
voidorchestra/stamps/: __init__.py  blob.py  mask.py
voidorchestra/tests/: test_all.py
voidorchestra/util/: cv.py  image.py  pil.py  rawpy.py
voidorchestra/zooniverse/: __init__.py  classifications.py  subject_sets.py  subjects.py  sync.py  workflows.py  zooniverse.py
(+126 files in other folders)
