[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "voidorchestra"
version = "0.1.0"
description = "Creates QPO sonifications, and syncs them to the Zooniverse."
requires-python = ">=3.12"
readme = "README.md"
dependencies = [
    "astropy>=7.0.1",
    "black>=25.1.0",
    "click>=8.1.8",
    "kaleido>=1.0.0",
    "mind-the-gaps",
    "moviepy>=2.1.2",
    "numba>=0.61.2",
    "pandas>=2.2.3",
    "panoptes-client>=1.7.0",
    "plotly>=6.2.0",
    "pydantic>=2.11.7",
    "ruff>=0.11.13",
    "sqlalchemy-utils>=0.41.2",
    "sqlalchemy>=2.0.40",
    "strauss>=1.0.1",
    "watchdog>=6.0.0",
]

[project.optional-dependencies]
notebooks = [
    "ipywidgets>=8.1.5",
    "jupyter>=1.1.1",
]
docs = [
    "sphinx>=8.2.3",
]

[dependency-groups]
dev = [
    "black>=25.1.0",
    "pylint>=3.3.6",
    "tqdm>=4.67.1",
]

[project.scripts]
void-orchestra = "voidorchestra.console.cli:cli"

[tool.ruff]
line-length = 150

[tool.ruff.lint]
extend-select = ["I"]

[tool.ruff.lint.isort]
combine-as-imports = true
default-section = "third-party"
known-first-party = ["python_template"]
section-order = ["future", "standard-library", "third-party", "first-party", "local-folder"]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]

[tool.uv.sources]
mind-the-gaps = { git = "https://github.com/andresgur/mind_the_gaps" }
