[build-system]
requires = ["hatchling"]
build-backend="hatchling.build"

[project]
name = "voidorchestra"
description = "Creates QPO sonifications, and syncs them to the Zooniverse."
readme = "README.md"
license = { text = "Apache-2.0" }
version = "0.1.0"
requires-python = ">=3.11"
keywords = []
classifiers = [
    "Development Status :: 3 - Alpha",
    "Programming Language :: Python",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
dependencies = [
    "astropy",
    "click",
    "kaleido",
    "mind-the-gaps",
    "moviepy",
    "numba",
    "pandas",
    "panoptes-client>=1.7",
    "plotly",
    "pydantic",
    "sqlalchemy-utils",
    "sqlalchemy",
    "strauss",
    "stingray>=2.2.7",
]



[project.optional-dependencies]
develop = [
    "build",
    "bump-my-version",
    "check-manifest",
    "codespell>=2.4,<2.5",
    "hatchling",
    "mdformat>=0.7.22,<0.8",
    "mdformat-tables>=1",
    "pytest",
    "pytest-cov",
    "ruff",
    "twine",
    "uv",
    "wheel",
]


[project.scripts]
voidorchestra = "voidorchestra.console.cli:cli"

[project.urls]
Repository = "https://github.com/Southampton-RSG/voidorchestra"
Homepage = "https://github.com/Southampton-RSG/voidorchestra"

[tool.bumpversion]
current_version = "0.1.0"
commit = true
tag = true
commit_args = "-s"

[[tool.bumpversion.files]]
filename = "voidorchestra/__init__.py"
search = '__version__ = "{current_version}"'
replace = '__version__ = "{new_version}"'

[[tool.bumpversion.files]]
filename = "pyproject.toml"
search = 'version = "{current_version}"'
replace = 'version = "{new_version}"'

[tool.check-manifest]
ignore = [
    ".copier-answers.yaml",
    "Makefile",
    "docs/**/*",
]

[tool.coverage.run]
branch = true
omit = [
    "voidorchestra/tests/integration/",
]
[tool.coverage.report]
exclude_also = [
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "@(abc\\.)?abstractmethod",
]
ignore_errors = true
fail_under = 50

[tool.hatch.build]
artifacts = []

[tool.hatch.build.sources]
src = "/"

[tool.hatch.build.targets.sdist]
packages = ["voidorchestra"]

[tool.hatch.build.targets.wheel]
packages = ["voidorchestra"]

[tool.hatch.build.targets.wheel.shared-data]

[tool.pytest.ini_options]
addopts = ["-vvv", "--junitxml=junit.xml"]
testpaths = "voidorchestra/tests"
[tool.ruff]
line-length = 150

[tool.ruff.lint]
extend-select = ["I"]

[tool.ruff.lint.isort]
combine-as-imports = true
default-section = "third-party"
known-first-party = ["voidorchestra"]
section-order = ["future", "standard-library", "third-party", "first-party", "local-folder"]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401", "F403"]

[tool.uv.sources]
mind-the-gaps = { git = "https://github.com/andresgur/mind_the_gaps" }

[tool.yardang]
title = "voidorchestra"
root = "README.md"
pages = []
use-autoapi = true
